# qsing-box

./: .gitignore  CMakeLists.txt  README.md
docs/: README.zh_CN.md
languages/: qsing-box_en_US.ts  qsing-box_zh_CN.ts
resources/: app.rc
resources/xml/: task.xml
src/: CMakeLists.txt  about_dialog.cpp  about_dialog.h  about_dialog.ui  main.cpp  main_window.cpp  main_window.h  main_window.ui  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  tray_icon.cpp  tray_icon.h
src/config/: CMakeLists.txt  config.cpp  config.h  config_editor.cpp  config_editor.h  config_editor.ui  config_manager.cpp  config_manager.h
src/proxy/: CMakeLists.txt  proxy_manager.cpp  proxy_manager.h  windows_proxy.cpp  windows_proxy.h
src/settings/: CMakeLists.txt  privilege_manager.cpp  privilege_manager.h  settings_manager.cpp  settings_manager.h  task_scheduler.cpp  task_scheduler.h
src/utils/: CMakeLists.txt  ansi_color_text.cpp  ansi_color_text.h
